<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_root_popup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical"
    android:padding="@dimen/height_12dp">

    <LinearLayout
        android:id="@+id/ll_back_popup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:id="@+id/tv_popup_camera"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_44dp"
        android:background="@drawable/btn_bg_popup_top_selector"
        android:gravity="center"
        android:text="@string/person_head_img_camera"
        android:textColor="@color/theme_color"
        android:textSize="@dimen/text_size_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1dp"
        android:background="@color/white_e9" />

    <TextView
        android:id="@+id/tv_popup_gallery"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_44dp"
        android:background="@drawable/btn_bg_popup_bottom_selector"
        android:gravity="center"
        android:text="@string/person_head_img_gallery"
        android:textColor="@color/theme_color"
        android:textSize="@dimen/text_size_16" />

    <TextView
        android:id="@+id/tv_popup_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_44dp"
        android:layout_marginTop="@dimen/height_13dp"
        android:background="@drawable/btn_bg_popup_selector"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/black_15"
        android:textSize="@dimen/text_size_16" />


</LinearLayout>