<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/height_290dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_66dp"
            android:background="@drawable/dialog_top_radius_bg"
            android:gravity="center"
            android:text="@string/treasure_worker_employ"
            android:textColor="@color/black_15"
            android:textSize="@dimen/text_size_16" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/height_26dp"
        android:paddingRight="@dimen/height_26dp"
        android:paddingTop="@dimen/height_21dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="确定要雇佣该矿工吗？"
            android:textColor="@color/black_a46"
            android:textSize="@dimen/text_size_11" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bottom_bg"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/height_27dp"
        android:paddingLeft="@dimen/height_26dp"
        android:paddingRight="@dimen/height_26dp"
        android:paddingTop="@dimen/height_23dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/height_65dp"
            android:layout_height="@dimen/height_25dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_exit_bg_selector"
            android:text="@string/cancel"
            android:textColor="@color/black_a46"
            android:textSize="@dimen/text_size_11" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_25dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/height_7dp"
            android:background="@drawable/btn_bg_selector"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_11" />
    </LinearLayout>

</LinearLayout>